<resources>
    <string name="app_name">Personal Tasks</string>

    <string name="title_activity_add_todo">Add Task</string>

    <!--for actions in menu_main-->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_more_apps">More Apps</string>
    <string name="action_completed_tasks">Completed Tasks</string>

    <!--for labels and hints in activty_add_todo-->
    <string name="label_title">Title:</string>
    <string name="hint_title">Enter Task Title</string>
    <string name="label_description">Description:(optional)</string>
    <string name="hint_description">Enter Task Description</string>
    <string name="label_dueDate">Date:</string>
    <string name="hint_dueDate">Enter Task Date</string>
    <string name="hint_dueTime">Enter Task Time</string>
    <string name="label_get_notified">Want to get Notified</string>
    <string name="label_priority">Priority:</string>
    <string name="label_not_important">Not Important</string>
    <string name="label_important">Important</string>
    <string name="title_activity_main">Pending Tasks</string>
    <string name="share_task_format">Title: %s Description: %s DueDate: %s Priority: %s Status: %s TimeOfAddition: %s</string>
    <string name="title_activity_completed_tasks">CompletedTasks</string>

</resources>
