<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kadyan.personaltasks.Activity.MainActivity">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_completed"
        android:orderInCategory="200"
        android:title="@string/action_completed_tasks"
        android:icon="@drawable/ic_done_all_black_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_more_apps"
        android:orderInCategory="300"
        android:title="@string/action_more_apps"
        android:icon="@drawable/ic_more_apps_black_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="never" />
</menu>
